Fix dependencies, regenerate bindings, and prepare 0.8.0